--- a/pandas (basics)/lsd math test.ipynb
+++ b/pandas (basics)/lsd math test.ipynb
@@ -557,16 +557,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x151884710>]"
+       "[<matplotlib.lines.Line2D at 0x15051aa50>]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     },
