--- a/pandas (basics)/lsd math test.ipynb
+++ b/pandas (basics)/lsd math test.ipynb
@@ -703,16 +703,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x17408b290>]"
+       "[<matplotlib.lines.Line2D at 0x17438ca50>]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
