--- a/gradient descent/gradient descent.ipynb
+++ b/gradient descent/gradient descent.ipynb
@@ -418,6 +418,40 @@
     "print(\"local min occurs at\", local_min)\n",
     "print(\"number of steps\", len(list_x))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ploting gradient descent \n",
+    "local_min,list_x,deriv_list = gradient_descent(dg, -1)\n",
+    "plt.figure(figsize=(10,4))\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.plot(x_2,g(x_2), color = 'blue',linewidth = 2, alpha = 0.7)\n",
+    "\n",
+    "plt.scatter(list_x,g(np.array(list_x)), color ='red',s = 50)\n",
+    "\n",
+    "plt.title('cost function')\n",
+    "plt.xlabel('x')\n",
+    "plt.ylabel('g(x)')\n",
+    "plt.xlim(-2,2)\n",
+    "plt.ylim(0.5,6)\n",
+    "plt.style.use('bmh')\n",
+    "\n",
+    "\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.plot(x_2,dg(x_2), color = 'green')\n",
+    "plt.scatter(list_x,deriv_list)\n",
+    "\n",
+    "plt.title('slop of cost function')\n",
+    "plt.xlim(-2,2)\n",
+    "plt.ylim(-6,8)\n",
+    "plt.xlabel('x')\n",
+    "plt.ylabel('Dgf(x)')\n",
+    "plt.style.use('fivethirtyeight')\n"
+   ]
   }
  ],
  "metadata": {
