--- a/gradient descent/gradient descent.ipynb
+++ b/gradient descent/gradient descent.ipynb
@@ -324,7 +324,7 @@
     "plt.subplot(1,2,1)\n",
     "plt.plot(x_2,g(x_2), color = 'blue',linewidth = 2)\n",
     "plt.show\n",
-    "plt.title('cost function')\n",
+    "plt.title('cost funct')\n",
     "plt.xlabel('x')\n",
     "plt.ylabel('g(x)')\n",
     "plt.xlim(-2,2)\n",
