--- a/gradient descent/gradient descent.ipynb
+++ b/gradient descent/gradient descent.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "list"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -544,6 +544,59 @@
     "print(\"local min occurs at\", local_min)\n",
     "print(\"the cost at that point is\", h(local_min))\n",
     "print(\"number of steps\", len(list_x))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Learning Rate\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (2626506497.py, line 27)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[186], line 27\u001b[0;36m\u001b[0m\n\u001b[0;31m    print('number of steps is:'len(list_x))\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "local_min,list_x,deriv_list = gradient_descent(dg, 1.9,multiplier=0.02)\n",
+    "plt.figure(figsize=(10,4))\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.plot(x_2,g(x_2), color = 'blue',linewidth = 2, alpha = 0.7)\n",
+    "\n",
+    "plt.scatter(list_x,g(np.array(list_x)), color ='red',s = 50)\n",
+    " \n",
+    "plt.title('cost function')\n",
+    "plt.xlabel('x')\n",
+    "plt.ylabel('g(x)')\n",
+    "plt.xlim(-2,2)\n",
+    "plt.ylim(0.5,6)\n",
+    "plt.style.use('bmh')\n",
+    "\n",
+    "\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.plot(x_2,dg(x_2), color = 'green')\n",
+    "plt.scatter(list_x,deriv_list)\n",
+    "\n",
+    "plt.title('slop of cost function')\n",
+    "plt.xlim(-2,2)\n",
+    "plt.ylim(-6,8)\n",
+    "plt.xlabel('x')\n",
+    "plt.ylabel('Dgf(x)')\n",
+    "plt.style.use('fivethirtyeight')\n",
+    "\n",
+    "print('number of steps is:'len(list_x))\n",
+    "\n"
    ]
   }
  ],
