--- a/gradient descent/gradient descent.ipynb
+++ b/gradient descent/gradient descent.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "list"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 408,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 418,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 420,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 421,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [
     {
@@ -768,15 +768,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fpx(x,y):\n",
     "    r = 3**((-x**2-y**2))\n",
     "    \n",
-    "    return 2*x*log(3)*r/(r+1)**2"
+    "    return 2*x*log(3)*r/(r+1)**2\n",
+    "\n",
+    "def fpy(x,y):\n",
+    "    r = r = 3**((-x**2-y**2))\n",
+    "\n",
+    "    return 2*y*log(3)*r/(r+1)**2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
