--- a/gradient descent/gradient descent.ipynb
+++ b/gradient descent/gradient descent.ipynb
@@ -19,7 +19,7 @@
     "from mpl_toolkits.mplot3d.axes3d import Axes3D\n",
     "from matplotlib import cm\n",
     "from sympy import symbols, diff\n",
-    "import math\n",
+    "import math \n",
     "\n",
     "%matplotlib inline"
    ]
@@ -723,16 +723,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "value in gradient array  [2.01013037525579e-11 1.11673909736433e-11]\n",
-      "the minimum value at x is  3.45838599885832e-11\n",
-      "the minimum value at y is  1.92132555492129e-11\n",
+      "value in gradient array  [1.19236432185219e-12 6.62424623251217e-13]\n",
+      "the minimum value at x is  2.05143712417512e-12\n",
+      "the minimum value at y is  1.13968729120840e-12\n",
       "the cost is 0.500000000000000\n"
      ]
     }
@@ -741,7 +741,7 @@
     "# setup\n",
     "\n",
     "mulitplier = 0.1\n",
-    "max_iter = 500\n",
+    "max_iter = 550\n",
     "params = np.array([1.8,1.0])\n",
     "\n",
     "for n in range(max_iter):\n",
@@ -768,27 +768,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fpx(x,y):\n",
     "    r = 3**((-x**2-y**2))\n",
     "    \n",
-    "    return 2*x*log(3)*r/(r+1)**2\n",
+    "    return 2*x*math.log(3)*r/(r+1)**2\n",
     "\n",
     "def fpy(x,y):\n",
     "    r = r = 3**((-x**2-y**2))\n",
     "\n",
-    "    return 2*y*log(3)*r/(r+1)**2"
+    "    return 2*y*math.log(3)*r/(r+1)**2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 431,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value in gradient array  [1.19236432e-12 6.62424623e-13]\n",
+      "the minimum value at x is  2.0514371241751123e-12\n",
+      "the minimum value at y is  1.1396872912083967e-12\n",
+      "the cost is 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# setup\n",
+    "\n",
+    "mulitplier = 0.1\n",
+    "max_iter = 550\n",
+    "params = np.array([1.8,1.0])\n",
+    "\n",
+    "for n in range(max_iter):\n",
+    "    gradient_x = fpx(params[0],params[1])\n",
+    "    gradient_y = fpy(params[0],params[1])\n",
+    "    gradients = np.array([gradient_x,gradient_y])\n",
+    "    params = params - mulitplier*gradients\n",
+    "\n",
+    "#results\n",
+    "print(\"value in gradient array \",gradients)\n",
+    "print('the minimum value at x is ',params[0])\n",
+    "print('the minimum value at y is ',params[1])\n",
+    "print('the cost is',f(params[0],params[1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graphing 3D descent & adv numpy arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 436,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3.45838600e-11 1.92132555e-11]]\n",
+      "(1, 2)\n",
+      "value in gradient array  [2.01013038e-11 1.11673910e-11]\n",
+      "the minimum value at x is  3.458385998858304e-11\n",
+      "the minimum value at y is  1.9213255549212797e-11\n",
+      "the cost is 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "mulitplier = 0.1\n",
+    "max_iter = 500\n",
+    "values_array = params.reshape(1,2)\n",
+    "print(values_array)\n",
+    "\n",
+    "print(values_array.shape)\n",
+    "params = np.array([1.8,1.0])\n",
+    "\n",
+    "for n in range(max_iter):\n",
+    "    gradient_x = fpx(params[0],params[1])\n",
+    "    gradient_y = fpy(params[0],params[1])\n",
+    "    gradients = np.array([gradient_x,gradient_y])\n",
+    "    params = params - mulitplier*gradients\n",
+    "\n",
+    "#results\n",
+    "print(\"value in gradient array \",gradients)\n",
+    "print('the minimum value at x is ',params[0])\n",
+    "print('the minimum value at y is ',params[1])\n",
+    "print('the cost is',f(params[0],params[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# adv numpy\n",
+    "\n",
+    "nicknames = np.array(['mike','ronan'])\n",
+    "nicknames = nicknames.reshape(1,2)\n",
+    "print(nicknames.shape)"
+   ]
   }
  ],
  "metadata": {
