--- a/gradient descent/gradient descent.ipynb
+++ b/gradient descent/gradient descent.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
     "plt.xlabel('x')\n",
     "plt.ylabel('Dh(x)')\n",
     "plt.style.use('fivethirtyeight')\n",
-    "\n"
+    "# plt\n"
    ]
   },
   {
